# xeus-lite

./: .gitignore  BuildWasmDockerfile  CMakeLists.txt  README.md  environment-dev.yml  environment-wasm-build.yml  environment-wasm-host.yml  xeus-liteConfig.cmake.in
.github/workflows/: main.yml
include/xeus-lite/: xembind.hpp  xeus-lite.hpp  xserver_emscripten.hpp
share/xeus-lite/: worker.ts
src/: xembind.cpp  xserver_emscripten.cpp
test/: CMakeLists.txt  copy_files.sh  kernel.json  kernel.json.in  main_emscripten_wasm.cpp  test_emscripten.sh  test_wasm.js  xmock_interpreter.cpp  xmock_interpreter.hpp
